[tool.poetry]
name = "libraryproject "
version = "0.1.0"
description = ""
authors = ["Tamir Mandreev <tamirmandreev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
ipython = "==8.31.0"
pillow = "^11.1.0"
redis = "^5.2.1"
gunicorn = "^23.0.0"
django-redis = "^5.4.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
pytest-cov = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config.settings'
python_files = ['tests.py']
addopts = '-p no:django_tests'
